upload all files

--- a/about-us.html
+++ b/about-us.html
@@ -4,116 +4,100 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- === SEO (About Us) === -->
-<title data-i18n-key="meta_title">เกี่ยวกับเรา | Baume Chemical</title>
-<meta name="description" content="บริษัท โบเม่ เคมิเคิล จำกัด ผู้นำเข้าและจัดหาเคมีภัณฑ์งานชุบเคลือบผิวโลหะคุณภาพสูง มากกว่า 35 ปี พร้อมบริการวิเคราะห์และที่ปรึกษาหน้างาน" data-i18n-attr="content:meta_desc">
+  <!-- ==== SEO Core (About; single-URL i18n) ==== -->
+  <title id="metaTitle">เกี่ยวกับเรา | Baume Chemical — ผู้เชี่ยวชาญเคมีงานชุบโลหะ 35+ ปี</title>
+  <meta name="description" id="metaDesc" content="บริษัท โบเม่ เคมิเคิล จำกัด ผู้นำเข้าและจัดหาเคมีภัณฑ์งานชุบ/เตรียมผิวคุณภาพสูง ประสบการณ์กว่า 35 ปี พร้อมบริการวิเคราะห์และที่ปรึกษาหน้างาน.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://www.baumechemical.com/about-us.html">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
 
-<!-- Canonical & Hreflang -->
-<link rel="canonical" href="https://www.baumechemical.com/about-us.html">
-<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/about-us.html">
-<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/about-us.html">
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
-<!-- Robots & Theme -->
-<meta name="robots" content="index, follow, max-image-preview:large">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-<meta name="theme-color" content="#2c5e4e">
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:url" content="https://www.baumechemical.com/about-us.html">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="เกี่ยวกับเรา | Baume Chemical — ผู้เชี่ยวชาญเคมีงานชุบโลหะ 35+ ปี">
+  <meta property="og:description" id="ogDesc" content="ผู้นำเข้าเคมีภัณฑ์งานชุบ/เตรียมผิวคุณภาพสูง พร้อมบริการแล็บและที่ปรึกษาหน้างาน.">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
+  <meta property="og:image:secure_url" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" id="twTitle" content="เกี่ยวกับเรา | Baume Chemical — ผู้เชี่ยวชาญเคมีงานชุบโลหะ 35+ ปี">
+  <meta name="twitter:description" id="twDesc" content="นำเข้า/จัดหาเคมีงานชุบโลหะคุณภาพสูง 35+ ปี พร้อมบริการแล็บและที่ปรึกษาหน้างาน.">
+  <meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
 
-<!-- Open Graph -->
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="Baume Chemical">
-<meta property="og:locale" content="th_TH" id="ogLocale">
-<meta property="og:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:og_title" id="ogTitle">
-<meta property="og:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 35 ปี" data-i18n-attr="content:og_desc" id="ogDesc">
-<meta property="og:url" content="https://www.baumechemical.com/about-us.html">
-<meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical" data-i18n-attr="content:og_img_alt">
-
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:tw_title" id="twTitle">
-<meta name="twitter:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 35 ปี" data-i18n-attr="content:tw_desc" id="twDesc">
-<meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
-<meta name="twitter:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical" data-i18n-attr="content:og_img_alt">
-
-  <!-- Perf: Preconnect -->
+  <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img5.pic.in.th" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg"/>
 
-<!-- === JSON-LD: Organization + Breadcrumb + AboutPage (linked) === -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@graph": [
-    {
-      "@type": "Organization",
-      "@id": "https://www.baumechemical.com/#org",
-      "name": "Baume Chemical",
-      "legalName": "บริษัท โบเม่ เคมิเคิล จำกัด",
-      "url": "https://www.baumechemical.com/",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://img2.pic.in.th/pic/Baume.jpg"
-      },
-      "telephone": "+66-92-546-9887",
-      "contactPoint": [{
-        "@type": "ContactPoint",
-        "contactType": "customer service",
-        "telephone": "+66-92-546-9887",
-        "areaServed": "TH",
-        "availableLanguage": ["th","en"]
-      }],
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก, เขต ภาษีเจริญ",
-        "addressLocality": "กรุงเทพมหานคร",
-        "postalCode": "10160",
-        "addressCountry": "TH"
-      },
-      "foundingDate": "1987",
-      "sameAs": [
-        "https://line.me/ti/p/~baumechemical",
-        "https://www.baumechemical.com/"
-      ]
-    },
-    {
-      "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/about-us.html#breadcrumb",
-      "itemListElement": [
-        { "@type": "ListItem","position": 1,"name": "หน้าแรก","item": "https://www.baumechemical.com/" },
-        { "@type": "ListItem","position": 2,"name": "เกี่ยวกับเรา","item": "https://www.baumechemical.com/about-us.html" }
-      ]
-    },
-    {
-      "@type": "AboutPage",
-      "@id": "https://www.baumechemical.com/about-us.html#about",
-      "url": "https://www.baumechemical.com/about-us.html",
-      "name": "เกี่ยวกับเรา | Baume Chemical",
-      "isPartOf": {
-        "@type": "WebSite",
-        "@id": "https://www.baumechemical.com/#website",
+  <!-- === JSON-LD: Organization + Breadcrumb + AboutPage === -->
+  <script id="ld-about" type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://www.baumechemical.com/#org",
         "name": "Baume Chemical",
-        "url": "https://www.baumechemical.com/"
+        "legalName": "บริษัท โบเม่ เคมิเคิล จำกัด",
+        "url": "https://www.baumechemical.com/",
+        "logo": {"@type":"ImageObject","url":"https://www.baumechemical.com/assets/logo.png"},
+        "telephone": "+66-92-546-9887",
+        "contactPoint": [{
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "telephone": "+66-92-546-9887",
+          "areaServed": "TH",
+          "availableLanguage": ["th","en"]
+        }],
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก, เขต ภาษีเจริญ",
+          "addressLocality": "กรุงเทพมหานคร",
+          "postalCode": "10160",
+          "addressCountry": "TH"
+        },
+        "foundingDate": "1987",
+        "sameAs": [
+          "https://line.me/ti/p/~baumechemical",
+          "https://www.baumechemical.com/"
+        ]
       },
-      "primaryImageOfPage": {
-        "@type": "ImageObject",
-        "url": "https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg",
-        "width": 1200,
-        "height": 630
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://www.baumechemical.com/about-us.html#breadcrumb",
+        "itemListElement": [
+          {"@type":"ListItem","position":1,"name":"หน้าแรก","item":"https://www.baumechemical.com/"},
+          {"@type":"ListItem","position":2,"name":"เกี่ยวกับเรา","item":"https://www.baumechemical.com/about-us.html"}
+        ]
       },
-      "publisher": { "@id": "https://www.baumechemical.com/#org" },
-      "breadcrumb": { "@id": "https://www.baumechemical.com/about-us.html#breadcrumb" },
-      "inLanguage": "th"
-    }
-  ]
-}
-</script>
+      {
+        "@type": "AboutPage",
+        "@id": "https://www.baumechemical.com/about-us.html#about",
+        "url": "https://www.baumechemical.com/about-us.html",
+        "name": "เกี่ยวกับเรา | Baume Chemical",
+        "isPartOf": {"@type":"WebSite","@id":"https://www.baumechemical.com/#website","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+        "primaryImageOfPage": {"@type":"ImageObject","url":"https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg","width":1200,"height":630},
+        "publisher": {"@id":"https://www.baumechemical.com/#org"},
+        "breadcrumb": {"@id":"https://www.baumechemical.com/about-us.html#breadcrumb"},
+        "inLanguage": "th"
+      }
+    ]
+  }
+  </script>
 
   <style>
     :root{
