--- a/products/equipment/index.html
+++ b/products/equipment/index.html
@@ -4,45 +4,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">วัสดุอุปกรณ์ | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="วัสดุอุปกรณ์และเครื่องมือสำหรับงานชุบโลหะและห้องปฏิบัติการ: รีเอเจนต์ เครื่องมือวิเคราะห์ และอุปกรณ์ควบคุมไลน์ชุบ ครบจบในที่เดียว พร้อมคำปรึกษาโดยผู้เชี่ยวชาญ">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Equipment; single-URL i18n) ==== -->
+  <title id="metaTitle">วัสดุอุปกรณ์งานชุบโลหะและห้องแล็บ | รีเอเจนต์ เครื่องมือวิเคราะห์ อุปกรณ์ควบคุม | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="วัสดุอุปกรณ์สำหรับไลน์ชุบโลหะและห้องปฏิบัติการครบวงจร ตั้งแต่รีเอเจนต์ เครื่องมือวิเคราะห์ ไปจนถึงอุปกรณ์ควบคุมกระบวนการ พร้อมคำปรึกษาจากผู้เชี่ยวชาญ.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/equipment/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/equipment/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/equipment/">
-  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/equipment/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปบนโดเมนตัวเองเพื่อพรีวิวเสถียร) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="วัสดุอุปกรณ์ | Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="อุปกรณ์ห้องแล็บและเครื่องมือควบคุมกระบวนการชุบโลหะครบวงจร พร้อมทีมที่ปรึกษา">
   <meta property="og:url" content="https://www.baumechemical.com/products/equipment/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="อุปกรณ์ห้องแล็บและไลน์ชุบโลหะ — Reagents • Analytical Instruments • Plating Equipment">
+  <meta property="og:description" id="ogDesc" content="โซลูชันวัสดุอุปกรณ์สำหรับกระบวนการชุบโลหะครบวงจร พร้อมทีมที่ปรึกษา.">
   <meta property="og:image" content="https://i.imgur.com/3mWQsKe.jpeg">
-  <meta property="og:image:alt" content="Lab and plating equipment by Baume Chemical">
+  <meta property="og:image:secure_url" content="https://i.imgur.com/3mWQsKe.jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Lab reagents, analytical instruments, and plating equipment">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="วัสดุอุปกรณ์ | Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="Lab reagents, analytical instruments, and plating line equipment — with expert guidance.">
+  <meta name="twitter:title" id="twTitle" content="อุปกรณ์ห้องแล็บและไลน์ชุบโลหะ — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="รีเอเจนต์ เครื่องมือวิเคราะห์ และอุปกรณ์ควบคุมไลน์ชุบ พร้อมคำปรึกษา.">
+  <meta name="twitter:image" content="https://i.imgur.com/3mWQsKe.jpeg">
 
-  <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","inLanguage":"th","name":"Equipment","url":"https://www.baumechemical.com/products/equipment/","description":"Lab reagents, analytical instruments, and plating line equipment for metal finishing."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Equipment","item":"https://www.baumechemical.com/products/equipment/"}]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Equipment categories","itemListElement":[{"@type":"ListItem","position":1,"name":"Laboratory Analytical Reagents","url":"https://www.baumechemical.com/products/equipment/labchemicals.html"},{"@type":"ListItem","position":2,"name":"Laboratory Analytical Equipment","url":"https://www.baumechemical.com/products/equipment/toolschemical.html"},{"@type":"ListItem","position":3,"name":"Plating Line Equipment","url":"https://www.baumechemical.com/products/equipment/platingequipment.html"}]}</script>
-
-  <!-- Fonts & Perf -->
+  <!-- Performance Hints -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/3mWQsKe.jpeg"/>
+  <link rel="preload" as="image"
+        href="https://i.imgur.com/3mWQsKe.jpeg"
+        imagesrcset="https://i.imgur.com/3mWQsKe.jpeg 800w, https://i.imgur.com/3mWQsKe.jpeg 1200w"
+        imagesizes="(max-width: 900px) 92vw, 900px">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
+  </script>
+
+  <!-- ใช้ CollectionPage + ItemList (หน้าหมวด) -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Equipment — วัสดุอุปกรณ์งานชุบโลหะและห้องแล็บ",
+    "url":"https://www.baumechemical.com/products/equipment/",
+    "description":"Lab reagents, analytical instruments, and plating line equipment for metal finishing.",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":3,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Laboratory Analytical Reagents","url":"https://www.baumechemical.com/products/equipment/labchemicals.html"},
+        {"@type":"ListItem","position":2,"name":"Laboratory Analytical Equipment","url":"https://www.baumechemical.com/products/equipment/toolschemical.html"},
+        {"@type":"ListItem","position":3,"name":"Plating Line Equipment","url":"https://www.baumechemical.com/products/equipment/platingequipment.html"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Analytical Reagents","url":"https://www.baumechemical.com/products/equipment/labchemicals.html"},
+      {"@type":"WebPage","name":"Analytical Equipment","url":"https://www.baumechemical.com/products/equipment/toolschemical.html"},
+      {"@type":"WebPage","name":"Plating Line Equipment","url":"https://www.baumechemical.com/products/equipment/platingequipment.html"}
+    ]
+  }
+  </script>
+
+  <!-- Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Equipment","item":"https://www.baumechemical.com/products/equipment/"}
+    ]
+  }
+  </script>
 
   <style>
     :root{
