--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -4,59 +4,108 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">โครเมตบนซิงค์ (Passivation) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="โครเมตบนซิงค์เพิ่มความทนการกัดกร่อน การยึดเกาะสี ลดการเกิด White Rust และเพิ่มความสวยงาม มีทั้ง Cr3/Cr6: ฟ้า/ขาว ดำ รุ้ง เหลือง และ Olive Drab">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Passivation; single-URL i18n) ==== -->
+  <title id="metaTitle">โครเมตบนซิงค์ (Passivation) Cr3/Cr6 สีฟ้า/ขาว ดำ รุ้ง เหลือง Olive Drab | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="โครเมตบนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 หลายเฉดสี เช่น ฟ้า/ขาว ดำ รุ้ง เหลือง และ Olive Drab พร้อมแนวทางใช้งานจริง.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/passivation/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/passivation/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/en/products/passivation/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิม) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="โครเมตบนซิงค์ (Passivation) - Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="Passivation บนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 และหลายเฉดสีตามสเปก">
   <meta property="og:url" content="https://www.baumechemical.com/products/passivation/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="โครเมตบนซิงค์ (Passivation) — Cr3/Cr6 หลายเฉดสี | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="Passivation บนซิงค์เพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 สีฟ้า/ขาว ดำ รุ้ง เหลือง และ เขียวทหาร">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-4.jpeg">
+  <meta property="og:image:secure_url" content="https://img2.pic.in.th/pic/image0-4.jpeg">
   <meta property="og:image:alt" content="Zinc passivation finishes: blue/white, black, iridescent, yellow, olive drab">
-  <meta property="og:locale:alternate" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="โครเมตบนซิงค์ (Passivation) - Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="Passivation บนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 และหลายเฉดสีตามสเปก">
+  <meta name="twitter:title" id="twTitle" content="โครเมตบนซิงค์ (Passivation) — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="โครเมตบนซิงค์ Cr3/Cr6 หลายเฉดสี เพื่อความทนการกัดกร่อนและการยึดเกาะสีที่ดีขึ้น.">
+  <meta name="twitter:image" content="https://img2.pic.in.th/pic/image0-4.jpeg">
+
+  <!-- Performance Hints -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img2.pic.in.th" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image0-4.jpeg"/>
 
   <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
   </script>
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","inLanguage":"th","name":"Chromate on Zinc","url":"https://www.baumechemical.com/products/passivation/","description":"Chromate conversion on zinc (Cr3/Cr6) with multiple finishes to enhance corrosion resistance and paint adhesion."}
+
+  <!-- ใช้ CollectionPage + ItemList (หน้าหมวด) -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Passivation — โครเมตบนซิงค์",
+    "url":"https://www.baumechemical.com/products/passivation/",
+    "description":"Chromate conversion on zinc (Cr3/Cr6) with multiple finishes to enhance corrosion resistance and paint adhesion.",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":8,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/products/passivation/blue-passivation-on-zinc"},
+        {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/products/passivation/trivalent-black"},
+        {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/products/passivation/iridescent-passivation-on-zinc"},
+        {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc"},
+        {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-blue"},
+        {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-black"},
+        {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/products/passivation/yellow-6-passivation-on-zinc"},
+        {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/products/passivation/olive-6-passivation-on-zinc"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Blue/White Chromate 3","url":"https://www.baumechemical.com/products/passivation/blue-passivation-on-zinc"},
+      {"@type":"WebPage","name":"Black Chromate 3","url":"https://www.baumechemical.com/products/passivation/trivalent-black"},
+      {"@type":"WebPage","name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/products/passivation/iridescent-passivation-on-zinc"},
+      {"@type":"WebPage","name":"Yellow Chromate 3","url":"https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc"},
+      {"@type":"WebPage","name":"Blue/White Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-blue"},
+      {"@type":"WebPage","name":"Black Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-black"},
+      {"@type":"WebPage","name":"Yellow Chromate 6","url":"https://www.baumechemical.com/products/passivation/yellow-6-passivation-on-zinc"},
+      {"@type":"WebPage","name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/products/passivation/olive-6-passivation-on-zinc"}
+    ]
+  }
   </script>
+
+  <!-- Breadcrumb -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Passivation","item":"https://www.baumechemical.com/products/passivation/"}
-  ]}
-  </script>
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"ItemList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Blue (White) Chromate 3","url":"https://www.baumechemical.com/products/passivation/blue-passivation-on-zinc"},
-    {"@type":"ListItem","position":2,"name":"Black Chromate 3","url":"https://www.baumechemical.com/products/passivation/trivalent-black"},
-    {"@type":"ListItem","position":3,"name":"Iridescent Chromate 3","url":"https://www.baumechemical.com/products/passivation/iridescent-passivation-on-zinc"},
-    {"@type":"ListItem","position":4,"name":"Yellow Chromate 3","url":"https://www.baumechemical.com/products/passivation/yellow-passivation-on-zinc"},
-    {"@type":"ListItem","position":5,"name":"Blue (White) Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-blue"},
-    {"@type":"ListItem","position":6,"name":"Black Chromate 6","url":"https://www.baumechemical.com/products/passivation/hex-black"},
-    {"@type":"ListItem","position":7,"name":"Yellow Chromate 6","url":"https://www.baumechemical.com/products/passivation/yellow-6-passivation-on-zinc"},
-    {"@type":"ListItem","position":8,"name":"Olive Drab Chromate 6","url":"https://www.baumechemical.com/products/passivation/olive-6-passivation-on-zinc"}
-  ]}
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Passivation","item":"https://www.baumechemical.com/products/passivation/"}
+    ]
+  }
   </script>
 
   <!-- Fonts -->
