--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -4,57 +4,104 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n ready) === -->
-  <title id="metaTitle">น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="น้ำยาชุบและเคลือบผิวโลหะสำหรับงานอุตสาหกรรม: ซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมคำปรึกษาและโซลูชันตามไลน์ผลิต">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Plating & Coating; single-URL i18n) ==== -->
+  <title id="metaTitle">น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) | Zinc Nickel Copper Brass แลคเกอร์ไฟฟ้า ไวท์บรอนซ์ | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="น้ำยาชุบและเคลือบผิวโลหะสำหรับงานอุตสาหกรรม ครอบคลุม Zinc Nickel Copper Brass แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมคำปรึกษาและโซลูชันตามไลน์ผลิต.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter (i18n ready) -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิมจาก Imgur) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) - Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="โซลูชันชุบและเคลือบผิวโลหะครบ: Zinc, Nickel, Copper, Brass, Electrolytic Lacquer, Cyanide-Free White Bronze">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="Plating & Coating — Zinc Nickel Copper Brass · Electrolytic Lacquer · White Bronze | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="โซลูชันชุบและเคลือบผิวโลหะครบ พร้อมทีมที่ปรึกษาและแนวทางใช้งานจริง.">
   <meta property="og:image" content="https://i.imgur.com/Vwpuq95.jpeg">
+  <meta property="og:image:secure_url" content="https://i.imgur.com/Vwpuq95.jpeg">
   <meta property="og:image:alt" content="Plating & Coating product examples">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) - Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="โซลูชันชุบและเคลือบผิวโลหะครบ: Zinc, Nickel, Copper, Brass, Electrolytic Lacquer, Cyanide-Free White Bronze">
+  <meta name="twitter:title" id="twTitle" content="น้ำยาชุบและเคลือบผิวโลหะ — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="Zinc Nickel Copper Brass แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์.">
+  <meta name="twitter:image" content="https://i.imgur.com/Vwpuq95.jpeg">
+
+  <!-- Performance Hints -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://i.imgur.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://i.imgur.com/Vwpuq95.jpeg"/>
 
   <!-- JSON-LD: Organization -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
   </script>
-  <!-- JSON-LD: CollectionPage -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","name":"Plating & Coating","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/","description":"น้ำยาชุบและเคลือบผิวโลหะ: ซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์"}
+
+  <!-- JSON-LD: CollectionPage + ItemList -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Plating & Coating — น้ำยาชุบและเคลือบผิวโลหะ",
+    "url":"https://www.baumechemical.com/products/platingcoating/",
+    "description":"น้ำยาชุบและเคลือบผิวโลหะ: ซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":6,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Zinc Plating","url":"https://www.baumechemical.com/products/platingcoating/zincplating/"},
+        {"@type":"ListItem","position":2,"name":"Nickel Plating","url":"https://www.baumechemical.com/products/platingcoating/nickelplating/"},
+        {"@type":"ListItem","position":3,"name":"Copper Plating","url":"https://www.baumechemical.com/products/platingcoating/copperplating/"},
+        {"@type":"ListItem","position":4,"name":"Brass Plating","url":"https://www.baumechemical.com/products/platingcoating/brassplating/"},
+        {"@type":"ListItem","position":5,"name":"Electrolytic Lacquer","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/"},
+        {"@type":"ListItem","position":6,"name":"Cyanide-Free White Bronze","url":"https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Zinc Plating","url":"https://www.baumechemical.com/products/platingcoating/zincplating/"},
+      {"@type":"WebPage","name":"Nickel Plating","url":"https://www.baumechemical.com/products/platingcoating/nickelplating/"},
+      {"@type":"WebPage","name":"Copper Plating","url":"https://www.baumechemical.com/products/platingcoating/copperplating/"},
+      {"@type":"WebPage","name":"Brass Plating","url":"https://www.baumechemical.com/products/platingcoating/brassplating/"},
+      {"@type":"WebPage","name":"Electrolytic Lacquer","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/"},
+      {"@type":"WebPage","name":"Cyanide-Free White Bronze","url":"https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/"}
+    ]
+  }
   </script>
+
   <!-- JSON-LD: Breadcrumb -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/"}
-  ]}
-  </script>
-  <!-- JSON-LD: ItemList of subcategories -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"ItemList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Zinc Plating","url":"https://www.baumechemical.com/products/platingcoating/zincplating/"},
-    {"@type":"ListItem","position":2,"name":"Nickel Plating","url":"https://www.baumechemical.com/products/platingcoating/nickelplating/"},
-    {"@type":"ListItem","position":3,"name":"Copper Plating","url":"https://www.baumechemical.com/products/platingcoating/copperplating/"},
-    {"@type":"ListItem","position":4,"name":"Brass Plating","url":"https://www.baumechemical.com/products/platingcoating/brassplating/"},
-    {"@type":"ListItem","position":5,"name":"Electrolytic Lacquer","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/"},
-    {"@type":"ListItem","position":6,"name":"Cyanide-Free White Bronze","url":"https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/"}
-  ]}
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/"}
+    ]
+  }
   </script>
 
   <!-- Fonts -->
