--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -4,62 +4,102 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว — เงากระจก ลดคราบ ออกแบบกระบวนการให้เหมาะกับไลน์ผลิต">
-  <meta name="robots" content="index, follow, max-image-preview:large">
+  <!-- ==== SEO Core (Category: Polishing; single-URL i18n) ==== -->
+  <title id="metaTitle">น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) | สเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี ตะกั่ว | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว ให้เงากระจก ลดคราบ ปรับสูตรและกระบวนการให้เหมาะกับไลน์ผลิต พร้อมคำปรึกษาผู้เชี่ยวชาญ.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/polishing/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/polishing/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/en/products/polishing/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) - Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะ: เงากระจก ทนการกัดกร่อน เหมาะทั้งงานอุตสาหกรรมและตกแต่ง">
   <meta property="og:url" content="https://www.baumechemical.com/products/polishing/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="Polishing — กัดเงา/ขัดเงาโลหะ เงากระจก | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับงานอุตสาหกรรมและตกแต่ง เงากระจก ลดคราบ พร้อมแนวทางใช้งานจริง.">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
+  <meta property="og:image:secure_url" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
   <meta property="og:image:alt" content="Mirror-polished metal parts: stainless, brass, aluminum, steel, zinc, lead">
-  <meta property="og:locale:alternate" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) - Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะ: เงากระจก ทนการกัดกร่อน เหมาะทั้งงานอุตสาหกรรมและตกแต่ง">
+  <meta name="twitter:title" id="twTitle" content="น้ำยากัดเงา/ขัดเงาโลหะ — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="เงากระจก ลดคราบ ปรับสูตรให้เหมาะกับไลน์ผลิต — สำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว.">
+  <meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img5.pic.in.th" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg">
 
-  <!-- JSON-LD -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}
+  <!-- JSON-LD: Organization -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
   </script>
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","name":"Polishing","inLanguage":"th","url":"https://www.baumechemical.com/products/polishing/","description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว"}
+
+  <!-- JSON-LD: CollectionPage + ItemList -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Polishing — น้ำยากัดเงา/ขัดเงาโลหะ",
+    "url":"https://www.baumechemical.com/products/polishing/",
+    "description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":5,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
+        {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
+        {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
+        {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
+        {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Stainless Steel Polishing","url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution"},
+      {"@type":"WebPage","name":"Brass Polishing","url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution"},
+      {"@type":"WebPage","name":"Aluminum Polishing","url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution"},
+      {"@type":"WebPage","name":"Steel Brite Dip","url":"https://www.baumechemical.com/products/polishing/steel-electropolishing-solution"},
+      {"@type":"WebPage","name":"Polishing for Zinc and Lead","url":"https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution"}
+    ]
+  }
   </script>
+
+  <!-- JSON-LD: Breadcrumb -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Polishing","item":"https://www.baumechemical.com/products/polishing/"}
-  ]}
-  </script>
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"ItemList","itemListElement":[
-    {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution","name":"Stainless Steel Polishing"},
-    {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution","name":"Brass Polishing"},
-    {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution","name":"Aluminum Polishing"},
-    {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/polishing/steel-electropolishing-solution","name":"Steel Brite Dip"},
-    {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution","name":"Polishing for Zinc and Lead"}
-  ]}
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Polishing","item":"https://www.baumechemical.com/products/polishing/"}
+    ]
+  }
   </script>
 
   <style>
