--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -4,83 +4,99 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
+  <!-- ==== SEO Core (Category: Pretreatment; single-URL i18n) ==== -->
   <title id="metaTitle">กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <meta name="description" id="metaDesc" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
-  <!-- Open Graph / Twitter -->
+  <!-- Open Graph / Twitter (ใช้รูปเดิมจาก Imgur) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ">
-  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/">
+  <meta property="og:description" id="ogDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
   <meta property="og:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
+  <meta property="og:image:secure_url" content="https://i.imgur.com/QfsLZ0I.jpeg">
   <meta property="og:image:alt" content="Pretreatment cleaning: acid, alkaline and ultrasonic">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ">
+  <meta name="twitter:description" id="twDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
+  <meta name="twitter:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "CollectionPage",
-  "name": "Pretreatment — Degreasing & Ultrasonic",
-  "url": "https://www.baumechemical.com/products/pretreatment/",
-  "description": "หมวด Pretreatment ครอบคลุมกรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค พร้อมอัตราส่วนใช้งานจริง.",
-  "isPartOf": {
-    "@type": "WebSite",
-    "name": "Baume Chemical",
-    "url": "https://www.baumechemical.com/"
-  },
-  "mainEntity": {
-    "@type": "ItemList",
-    "itemListOrder": "ItemListOrderAscending",
-    "numberOfItems": 3,
-    "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Acid Cleaner Pretreatment",
-        "url": "https://www.baumechemical.com/products/pretreatment/acidclean.html"
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "name": "Alkaline Cleaner Pretreatment",
-        "url": "https://www.baumechemical.com/products/pretreatment/soakclean.html"
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "name": "Ultrasonic Cleaner Pretreatment",
-        "url": "https://www.baumechemical.com/products/pretreatment/ultrasonic.html"
-      }
+  <!-- Fonts & Perf -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://i.imgur.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://i.imgur.com/QfsLZ0I.jpeg"/>
+
+  <!-- JSON-LD: Organization -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
     ]
   }
-}
-</script>
+  </script>
 
-<!-- Breadcrumb -->
-<script type="application/ld+json">
-{
-  "@context":"https://schema.org",
-  "@type":"BreadcrumbList",
-  "itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-    {"@type":"ListItem","position":3,"name":"Pretreatment","item":"https://www.baumechemical.com/products/pretreatment/"}
-  ]
-}
-</script>
+  <!-- JSON-LD: CollectionPage + ItemList -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "inLanguage": "th",
+    "name": "Pretreatment — Degreasing & Ultrasonic",
+    "url": "https://www.baumechemical.com/products/pretreatment/",
+    "description": "หมวด Pretreatment ครอบคลุมกรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค พร้อมอัตราส่วนใช้งานจริง.",
+    "isPartOf": {"@type": "WebSite","name": "Baume Chemical","url": "https://www.baumechemical.com/"},
+    "mainEntity": {
+      "@type": "ItemList",
+      "itemListOrder": "ItemListOrderAscending",
+      "numberOfItems": 3,
+      "itemListElement": [
+        {"@type": "ListItem","position": 1,"name": "Acid Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/acidclean.html"},
+        {"@type": "ListItem","position": 2,"name": "Alkaline Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/soakclean.html"},
+        {"@type": "ListItem","position": 3,"name": "Ultrasonic Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/ultrasonic.html"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Acid Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/acidclean.html"},
+      {"@type":"WebPage","name":"Alkaline Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/soakclean.html"},
+      {"@type":"WebPage","name":"Ultrasonic Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/ultrasonic.html"}
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Pretreatment","item":"https://www.baumechemical.com/products/pretreatment/"}
+    ]
+  }
+  </script>
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
