--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -4,47 +4,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="สารเคลือบป้องกันหมองและแลคเกอร์ ป้องกันออกซิเดชัน/สีหมอง โดยคงความเงางาม ไลน์ครบ: จุ่มเย็น จุ่มร้อน อิเล็กโทร ป้องกันหมองบนดีบุก และแลคเกอร์น้ำ">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Protective; single-URL i18n) ==== -->
+  <title id="metaTitle">สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) | จุ่มเย็น จุ่มร้อน อิเล็กโทร ดีบุก แล็กเกอร์น้ำ | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="สารเคลือบป้องกันหมองและแลคเกอร์ ป้องกันออกซิเดชัน/สีหมอง คงความเงางาม เพิ่มทนซอลต์สเปรย์ ครบไลน์: จุ่มเย็น จุ่มร้อน อิเล็กโทร ป้องกันหมองดีบุก และแลคเกอร์น้ำ พร้อมทีมเทคนิคดูแลงานจริง.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/protective/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/protective/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/en/products/protective/">
-  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/protective/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
-  <meta name="keywords" content="anti-tarnish,lacquer,protective coating,metal finishing,jewelry coating,corrosion protection,zinc,nickel,copper,brass,stainless steel,aluminum,tin,Baume Chemical">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) - Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="โซลูชันป้องกันหมองและแลคเกอร์ กันออกซิเดชัน/สีหมอง เสริมความทนเค็ม ใช้ได้ทั้งงานเครื่องประดับและอุตสาหกรรม">
   <meta property="og:url" content="https://www.baumechemical.com/products/protective/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="Anti-Tarnish & Lacquer — ป้องกันหมอง คงความเงางาม | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="โซลูชันป้องกันออกซิเดชัน/สีหมอง เพิ่มทนซอลต์สเปรย์ ใช้ได้ทั้งงานเครื่องประดับและอุตสาหกรรม.">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg">
+  <meta property="og:image:secure_url" content="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg">
   <meta property="og:image:alt" content="Protective coatings: anti-tarnish and lacquer finishes on metal parts">
-  <meta property="og:locale:alternate" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) - Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="โซลูชันแอนติทาร์นิชและแลคเกอร์เพื่อคงความเงางามและเพิ่มการทนการกัดกร่อน">
+  <meta name="twitter:title" id="twTitle" content="สารเคลือบป้องกันผิว — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="แอนติทาร์นิชและแลคเกอร์: จุ่มเย็น จุ่มร้อน อิเล็กโทร ดีบุก และแลคเกอร์น้ำ.">
+  <meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg">
 
-  <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","inLanguage":"th","name":"Anti-Tarnish Solution - Lacquer","url":"https://www.baumechemical.com/products/protective/","description":"Anti-tarnish & lacquer coatings to prevent oxidation/discoloration while preserving metal shine for jewelry and industrial parts."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Protective","item":"https://www.baumechemical.com/products/protective/"}]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/products/protective/antitarnish-for-copper"},
-    {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-186"},
-    {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-20"},
-    {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100"},
-    {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
-  ]}</script>
+  <!-- Fonts & Perf -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img5.pic.in.th" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image8a6055e938ac1f34c.jpeg"/>
+
+  <!-- JSON-LD: Organization -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: CollectionPage + ItemList -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Protective — Anti-Tarnish & Lacquer",
+    "url":"https://www.baumechemical.com/products/protective/",
+    "description":"Anti-tarnish & lacquer coatings to prevent oxidation/discoloration while preserving metal shine for jewelry and industrial parts.",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":5,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Cold Dip Anti-Tarnish for Copper and Brass","url":"https://www.baumechemical.com/products/protective/antitarnish-for-copper"},
+        {"@type":"ListItem","position":2,"name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-186"},
+        {"@type":"ListItem","position":3,"name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-20"},
+        {"@type":"ListItem","position":4,"name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100"},
+        {"@type":"ListItem","position":5,"name":"Lacquer Coating","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Cold Dip Anti-Tarnish (Cu/Brass)","url":"https://www.baumechemical.com/products/protective/antitarnish-for-copper"},
+      {"@type":"WebPage","name":"Hot Dip Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-186"},
+      {"@type":"WebPage","name":"Electro Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/anti-tarnish-bu-20"},
+      {"@type":"WebPage","name":"Tin Anti-Tarnish","url":"https://www.baumechemical.com/products/protective/tin-anti-tarnish-b100"},
+      {"@type":"WebPage","name":"Lacquer Coating","url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer"}
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Protective","item":"https://www.baumechemical.com/products/protective/"}
+    ]
+  }
+  </script>
 
   <!-- Fonts & Preloads -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
