--- a/products/service/index.html
+++ b/products/service/index.html
@@ -4,46 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">บริการลูกค้า | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="บริการลูกค้า Baume Chemical: วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบสเปรย์ซอลต์ และที่ปรึกษากระบวนการชุบ โดยทีมมากประสบการณ์ 30+ ปี มาตรฐานแม่นยำเชื่อถือได้">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Service; single-URL i18n) ==== -->
+  <title id="metaTitle">บริการลูกค้า — วิเคราะห์สารละลาย, AA Test, Salt Spray, ที่ปรึกษากระบวนการชุบ | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="บริการลูกค้า Baume Chemical: วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test), ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมประสบการณ์กว่า 30 ปี มาตรฐานแม่นยำเชื่อถือได้.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/service/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/service/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/service/">
-  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/service/">
+  <meta name="theme-color" content="#387b5b">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#387b5b">
-  <meta name="keywords" content="metal plating service, chemical analysis, AA Test, Salt Spray Test, plating troubleshooting, laboratory, Baume Chemical">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิม) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="บริการลูกค้า | Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="วิเคราะห์สารละลาย, AA Test, Salt Spray Test และให้คำปรึกษากระบวนการชุบโลหะ โดยผู้เชี่ยวชาญ">
   <meta property="og:url" content="https://www.baumechemical.com/products/service/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="บริการลูกค้า — วิเคราะห์สารละลาย • AA Test • Salt Spray • ที่ปรึกษา | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="บริการห้องแล็บและหน้างานสำหรับสายการชุบโลหะ มาตรฐานแม่นยำ เชื่อถือได้.">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-6.jpg">
+  <meta property="og:image:secure_url" content="https://img2.pic.in.th/pic/thumbnail-6.jpg">
   <meta property="og:image:alt" content="Laboratory and on-site metal finishing services">
-  <meta property="og:locale:alternate" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="บริการลูกค้า | Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="Solution analysis, AA Test, Salt Spray, and plating process consulting by experts.">
-
-  <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","inLanguage":"th","name":"Customer Service","url":"https://www.baumechemical.com/products/service/","description":"Customer services for metal plating: chemical solution analysis, AA Test, Salt Spray Test and process consultation by Baume Chemical."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Service","item":"https://www.baumechemical.com/products/service/"}]}</script>
+  <meta name="twitter:title" id="twTitle" content="บริการลูกค้า — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="Solution analysis, AA Test, Salt Spray และที่ปรึกษากระบวนการชุบ โดยผู้เชี่ยวชาญ.">
+  <meta name="twitter:image" content="https://img2.pic.in.th/pic/thumbnail-6.jpg">
 
   <!-- Fonts & Preloads -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img2.pic.in.th" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://img2.pic.in.th/pic/thumbnail-6.jpg"/>
+
+  <!-- JSON-LD: Organization -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: CollectionPage + ItemList (บริการหลักในหน้าเดียว) -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Customer Service — Metal Finishing",
+    "url":"https://www.baumechemical.com/products/service/",
+    "description":"Customer services for metal plating: chemical solution analysis, AA Test, Salt Spray Test and process consultation by Baume Chemical.",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":4,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Chemical Solution Analysis","url":"https://www.baumechemical.com/products/service/#solution-analysis"},
+        {"@type":"ListItem","position":2,"name":"AA Test (Metal Contamination)","url":"https://www.baumechemical.com/products/service/#aa-test"},
+        {"@type":"ListItem","position":3,"name":"Salt Spray Test","url":"https://www.baumechemical.com/products/service/#salt-spray"},
+        {"@type":"ListItem","position":4,"name":"Process Consulting & Troubleshooting","url":"https://www.baumechemical.com/products/service/#consulting"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Solution Analysis","url":"https://www.baumechemical.com/products/service/#solution-analysis"},
+      {"@type":"WebPage","name":"AA Test","url":"https://www.baumechemical.com/products/service/#aa-test"},
+      {"@type":"WebPage","name":"Salt Spray Test","url":"https://www.baumechemical.com/products/service/#salt-spray"},
+      {"@type":"WebPage","name":"Process Consulting","url":"https://www.baumechemical.com/products/service/#consulting"}
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Service","item":"https://www.baumechemical.com/products/service/"}
+    ]
+  }
+  </script>
 
   <style>
     :root{
