--- a/products/strippers/index.html
+++ b/products/strippers/index.html
@@ -4,43 +4,99 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- === SEO (i18n-ready) === -->
-  <title id="metaTitle">น้ำยาลอกผิว/ลอกชุบ (Strippers) | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับเหล็ก ทองแดง ทองเหลือง ฯลฯ — ควบคุมง่าย ลอกเฉพาะชั้นเคลือบ เตรียมผิวสำหรับชุบ พ่นสี หรือเชื่อม">
-  <meta name="robots" content="index,follow,max-image-preview:large">
+  <!-- ==== SEO Core (Category: Strippers; single-URL i18n) ==== -->
+  <title id="metaTitle">น้ำยาลอกผิว/ลอกชุบ (Strippers) | ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะชั้น | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="น้ำยาลอกชั้นชุบ ออกไซด์ และสี สำหรับเหล็ก ทองแดง ทองเหลือง ฯลฯ — ควบคุมง่าย ลอกเฉพาะชั้นเคลือบ ปกป้องเนื้อโลหะ เตรียมผิวสำหรับชุบ พ่นสี หรือเชื่อม.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/strippers/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/strippers/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/en/products/strippers/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" id="ogTitle" content="น้ำยาลอกผิว/ลอกชุบ (Strippers) - Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะจุด เพื่อเตรียมผิวสำหรับกระบวนการถัดไปในไลน์ผลิต">
   <meta property="og:url" content="https://www.baumechemical.com/products/strippers/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="Strippers — ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะชั้น | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="ลอกเฉพาะชั้นเคลือบ ปกป้องเนื้อโลหะ เตรียมผิวสำหรับการชุบใหม่ พ่นสี หรือเชื่อม.">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-4.jpg">
+  <meta property="og:image:secure_url" content="https://img2.pic.in.th/pic/thumbnail-4.jpg">
   <meta property="og:image:alt" content="Metal parts with coatings being stripped for rework">
-  <meta property="og:locale:alternate" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="น้ำยาลอกผิว/ลอกชุบ (Strippers) - Baume Chemical">
-  <meta name="twitter:description" id="twDesc" content="ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะจุด เพื่อเตรียมผิวสำหรับกระบวนการถัดไปในไลน์ผลิต">
+  <meta name="twitter:title" id="twTitle" content="น้ำยาลอกผิว/ลอกชุบ — Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="ลอกชั้นชุบ ออกไซด์ สี แบบควบคุมเฉพาะชั้น ปกป้องเนื้อโลหะ พร้อมเข้าสู่กระบวนการถัดไป.">
+  <meta name="twitter:image" content="https://img2.pic.in.th/pic/thumbnail-4.jpg">
 
-  <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Strippers","inLanguage":"th","url":"https://www.baumechemical.com/products/strippers/","description":"น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับโลหะหลายชนิด เหมาะกับงานเตรียมผิวก่อนชุบ พ่นสี หรือเชื่อม"}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Strippers","item":"https://www.baumechemical.com/products/strippers/"}]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","itemListElement":[
-    {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/strippers/stripper-steel","name":"Nickel Stripper for Steel"},
-    {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/strippers/stripper-brass","name":"Nickel Stripper for Copper & Brass"},
-    {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/strippers/stripper-steel-electroplating","name":"Electroplated Nickel Stripper for Steel"}
-  ]}</script>
+  <!-- Fonts & Perf -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img2.pic.in.th" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/thumbnail-4.jpg"/>
+
+  <!-- JSON-LD: Organization -->
+  <script id="ld-org" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Baume Chemical",
+    "url":"https://www.baumechemical.com/",
+    "logo":"https://www.baumechemical.com/assets/logo.png",
+    "sameAs":[
+      "https://www.facebook.com/baumechemical",
+      "https://www.linkedin.com/company/baumechemical",
+      "https://line.me/ti/p/~baumechemical"
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: CollectionPage + ItemList -->
+  <script id="ld-collection" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"CollectionPage",
+    "inLanguage":"th",
+    "name":"Strippers — น้ำยาลอกผิว/ลอกชุบ",
+    "url":"https://www.baumechemical.com/products/strippers/",
+    "description":"น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับโลหะหลายชนิด เหมาะกับงานเตรียมผิวก่อนชุบ พ่นสี หรือเชื่อม",
+    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
+    "mainEntity":{
+      "@type":"ItemList",
+      "itemListOrder":"ItemListOrderAscending",
+      "numberOfItems":3,
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/strippers/stripper-steel","name":"Nickel Stripper for Steel"},
+        {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/strippers/stripper-brass","name":"Nickel Stripper for Copper & Brass"},
+        {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/strippers/stripper-steel-electroplating","name":"Electroplated Nickel Stripper for Steel"}
+      ]
+    },
+    "hasPart":[
+      {"@type":"WebPage","name":"Nickel Stripper for Steel","url":"https://www.baumechemical.com/products/strippers/stripper-steel"},
+      {"@type":"WebPage","name":"Nickel Stripper for Copper & Brass","url":"https://www.baumechemical.com/products/strippers/stripper-brass"},
+      {"@type":"WebPage","name":"Electroplated Nickel Stripper for Steel","url":"https://www.baumechemical.com/products/strippers/stripper-steel-electroplating"}
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumb -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Strippers","item":"https://www.baumechemical.com/products/strippers/"}
+    ]
+  }
+  </script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
