--- a/contact-us.html
+++ b/contact-us.html
@@ -4,108 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- === SEO (Contact) === -->
-<title id="metaTitle">ติดต่อเรา | Baume Chemical</title>
-<meta name="description" id="metaDesc" content="ติดต่อ Baume Chemical เพื่อให้ทีมงานติดต่อกลับผ่านอีเมล กรอกอีเมลแล้วส่งได้ทันที พร้อมข้อมูลติดต่ออื่นๆ และแผนที่บริษัท">
-<meta name="robots" content="index, follow, max-image-preview:large">
-<link rel="canonical" href="https://www.baumechemical.com/contact-us.html">
-<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/contact-us.html">
-<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/contact-us.html">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-<meta name="theme-color" content="#2c5e4e">
-<meta name="format-detection" content="telephone=no,address=no,email=no">
+  <!-- ==== SEO Core (Contact; single-URL i18n) ==== -->
+  <title id="metaTitle">ติดต่อเรา | Baume Chemical</title>
+  <meta name="description" id="metaDesc" content="ติดต่อ Baume Chemical เพื่อให้ทีมงานติดต่อกลับผ่านอีเมล กรอกอีเมลแล้วส่งได้ทันที พร้อมข้อมูลติดต่ออื่นๆ และแผนที่บริษัท.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://www.baumechemical.com/contact-us.html">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no,address=no,email=no">
 
-<!-- Open Graph -->
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="Baume Chemical">
-<meta property="og:locale" id="ogLocale" content="th_TH">
-<meta property="og:title" id="ogTitle" content="ติดต่อเรา | Baume Chemical">
-<meta property="og:description" id="ogDesc" content="กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท">
-<meta property="og:url" content="https://www.baumechemical.com/contact-us.html">
-<meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="อาคาร/สถานที่ตั้งของ Baume Chemical">
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" id="twTitle" content="ติดต่อเรา | Baume Chemical">
-<meta name="twitter:description" id="twDesc" content="กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท">
-<meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
-<meta name="twitter:image:alt" content="อาคาร/สถานที่ตั้งของ Baume Chemical">
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:url" content="https://www.baumechemical.com/contact-us.html">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="ติดต่อเรา | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท.">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
+  <meta property="og:image:secure_url" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="อาคาร/สถานที่ตั้งของ Baume Chemical">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" id="twTitle" content="ติดต่อเรา | Baume Chemical">
+  <meta name="twitter:description" id="twDesc" content="กรอกอีเมลเพื่อให้เราติดต่อกลับได้ทันที พร้อมดูเบอร์โทรและแผนที่บริษัท.">
+  <meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
+  <meta name="twitter:image:alt" content="อาคาร/สถานที่ตั้งของ Baume Chemical">
 
-<!-- Perf -->
-<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="dns-prefetch" href="//img5.pic.in.th">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-<link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
+  <!-- Perf -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://img5.pic.in.th" crossorigin>
+  <link rel="dns-prefetch" href="//img5.pic.in.th">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/V8.jpg">
 
-<!-- === Structured Data (JSON-LD) : Organization + Breadcrumb + ContactPage === -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@graph": [
-    {
-      "@type": "Organization",
-      "@id": "https://www.baumechemical.com/#org",
-      "name": "Baume Chemical",
-      "legalName": "บริษัท โบเม่ เคมิเคิล จำกัด",
-      "url": "https://www.baumechemical.com/",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://img2.pic.in.th/pic/Baume.jpg"
+  <!-- === Structured Data (JSON-LD) : Organization + Breadcrumb + ContactPage === -->
+  <script id="ld-contact" type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://www.baumechemical.com/#org",
+        "name": "Baume Chemical",
+        "legalName": "บริษัท โบเม่ เคมิเคิล จำกัด",
+        "url": "https://www.baumechemical.com/",
+        "logo": {"@type":"ImageObject","url":"https://www.baumechemical.com/assets/logo.png"},
+        "sameAs": ["https://line.me/ti/p/~baumechemical","https://www.baumechemical.com/"],
+        "telephone": "+66-92-546-9887",
+        "contactPoint": [
+          {"@type":"ContactPoint","telephone":"+66-2-869-6400","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"]},
+          {"@type":"ContactPoint","telephone":"+66-2-869-6402","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"]},
+          {"@type":"ContactPoint","telephone":"+66-92-546-9887","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"]}
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก, เขต ภาษีเจริญ",
+          "addressLocality": "กรุงเทพมหานคร",
+          "postalCode": "10160",
+          "addressCountry": "TH"
+        },
+        "foundingDate": "1987"
       },
-      "sameAs": [
-        "https://line.me/ti/p/~baumechemical",
-        "https://www.baumechemical.com/"
-      ],
-      "telephone": "+66-92-546-9887",
-      "contactPoint": [
-        { "@type":"ContactPoint","telephone":"+66-2-869-6400","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"] },
-        { "@type":"ContactPoint","telephone":"+66-2-869-6402","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"] },
-        { "@type":"ContactPoint","telephone":"+66-92-546-9887","contactType":"customer support","areaServed":"TH","availableLanguage":["th","en"] }
-      ],
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก, เขต ภาษีเจริญ",
-        "addressLocality": "กรุงเทพมหานคร",
-        "postalCode": "10160",
-        "addressCountry": "TH"
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://www.baumechemical.com/contact-us.html#breadcrumb",
+        "itemListElement": [
+          {"@type":"ListItem","position":1,"name":"หน้าแรก","item":"https://www.baumechemical.com/"},
+          {"@type":"ListItem","position":2,"name":"ติดต่อเรา","item":"https://www.baumechemical.com/contact-us.html"}
+        ]
       },
-      "foundingDate": "1987"
-    },
-    {
-      "@type": "BreadcrumbList",
-      "@id": "https://www.baumechemical.com/contact-us.html#breadcrumb",
-      "itemListElement": [
-        { "@type": "ListItem", "position": 1, "name": "หน้าแรก", "item": "https://www.baumechemical.com/" },
-        { "@type": "ListItem", "position": 2, "name": "ติดต่อเรา", "item": "https://www.baumechemical.com/contact-us.html" }
-      ]
-    },
-    {
-      "@type": "ContactPage",
-      "@id": "https://www.baumechemical.com/contact-us.html#page",
-      "name": "ติดต่อเรา | Baume Chemical",
-      "url": "https://www.baumechemical.com/contact-us.html",
-      "about": { "@id": "https://www.baumechemical.com/#org" },
-      "breadcrumb": { "@id": "https://www.baumechemical.com/contact-us.html#breadcrumb" },
-      "primaryImageOfPage": {
-        "@type": "ImageObject",
-        "url": "https://img5.pic.in.th/file/secure-sv1/V8.jpg",
-        "width": 1200,
-        "height": 630
-      },
-      "inLanguage": "th"
-    }
-  ]
-}
-</script>
-
+      {
+        "@type": "ContactPage",
+        "@id": "https://www.baumechemical.com/contact-us.html#page",
+        "name": "ติดต่อเรา | Baume Chemical",
+        "url": "https://www.baumechemical.com/contact-us.html",
+        "about": {"@id":"https://www.baumechemical.com/#org"},
+        "breadcrumb": {"@id":"https://www.baumechemical.com/contact-us.html#breadcrumb"},
+        "primaryImageOfPage": {"@type":"ImageObject","url":"https://img5.pic.in.th/file/secure-sv1/V8.jpg","width":1200,"height":630},
+        "inLanguage": "th"
+      }
+    ]
+  }
+  </script>
 
   <style>
     :root{
