--- a/index.html
+++ b/index.html
@@ -4,38 +4,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- SEO -->
-  <title>Baume Chemical | เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน</title>
-  <meta name="description" content="โซลูชันเคมีงานชุบและการเตรียมผิวครบวงจร: Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing พร้อมทีมเทคนิคและบริการหน้างาน.">
-  <meta name="robots" content="index, follow, max-image-preview:large">
+  <!-- ==== SEO Core (Home; single-URL i18n) ==== -->
+  <title id="metaTitle">Baume Chemical | เคมีงานชุบโลหะครบวงจร — Pretreatment • Plating • Blackening • Passivation</title>
+  <meta name="description" id="metaDesc" content="โซลูชันเคมีงานชุบและการเตรียมผิวครบวงจร—Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing—พร้อมทีมเทคนิคและบริการหน้างาน.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/">
+  <meta name="theme-color" content="#2c5e4e">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
-  <meta name="theme-color" content="#2c5e4e">
+  <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="Baume Chemical | เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน">
-  <meta property="og:description" content="โซลูชันเคมีงานชุบครบวงจร พร้อมทีมเทคนิคและบริการหน้างาน">
   <meta property="og:url" content="https://www.baumechemical.com/">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <meta property="og:title" id="ogTitle" content="Baume Chemical — เคมีงานชุบโลหะครบวงจร">
+  <meta property="og:description" id="ogDesc" content="โซลูชันเคมีงานชุบครบวงจร พร้อมทีมเทคนิคและบริการหน้างาน.">
   <meta property="og:image" content="https://i.imgur.com/3xwVLZZ.jpeg">
+  <meta property="og:image:secure_url" content="https://i.imgur.com/3xwVLZZ.jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Metal finishing solutions by Baume Chemical">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" id="twTitle" content="Baume Chemical — เคมีงานชุบโลหะครบวงจร">
+  <meta name="twitter:description" id="twDesc" content="Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing พร้อมทีมเทคนิค.">
   <meta name="twitter:image" content="https://i.imgur.com/3xwVLZZ.jpeg">
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://i.imgur.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://i.imgur.com/3xwVLZZ.jpeg">
 
   <!-- JSON-LD: Organization -->
-  <script type="application/ld+json">
+  <script id="ld-org" type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"Organization",
@@ -46,8 +55,8 @@
   }
   </script>
 
-  <!-- JSON-LD: Home as WebPage -->
-  <script type="application/ld+json">
+  <!-- JSON-LD: WebPage (Home) -->
+  <script id="ld-home" type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
@@ -56,6 +65,26 @@
     "inLanguage":"th",
     "isPartOf":{"@type":"WebSite","url":"https://www.baumechemical.com/","name":"Baume Chemical"},
     "description":"โซลูชันเคมีงานชุบครบวงจร พร้อมทีมเทคนิคและบริการหน้างาน"
+  }
+  </script>
+
+  <!-- JSON-LD: Top Categories for Sitelinks understanding -->
+  <script id="ld-cats" type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"ItemList",
+    "name":"Primary product categories",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/"},
+      {"@type":"ListItem","position":2,"name":"Plating & Coating","url":"https://www.baumechemical.com/products/platingcoating/"},
+      {"@type":"ListItem","position":3,"name":"Blackening","url":"https://www.baumechemical.com/products/blackening/"},
+      {"@type":"ListItem","position":4,"name":"Passivation","url":"https://www.baumechemical.com/products/passivation/"},
+      {"@type":"ListItem","position":5,"name":"Polishing","url":"https://www.baumechemical.com/products/polishing/"},
+      {"@type":"ListItem","position":6,"name":"Protective (Anti-Tarnish & Lacquer)","url":"https://www.baumechemical.com/products/protective/"},
+      {"@type":"ListItem","position":7,"name":"Strippers","url":"https://www.baumechemical.com/products/strippers/"},
+      {"@type":"ListItem","position":8,"name":"Equipment","url":"https://www.baumechemical.com/products/equipment/"},
+      {"@type":"ListItem","position":9,"name":"Service","url":"https://www.baumechemical.com/products/service/"}
+    ]
   }
   </script>
 
