--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -4,19 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- ==== SEO Core (Category: Blackening) ==== -->
+  <!-- ==== SEO Core (Category: Blackening; single-URL i18n) ==== -->
   <title id="metaTitle">น้ำยารมดำโลหะแบบจุ่มเย็น สำหรับทองเหลือง ทองแดง เหล็ก ซิงค์ อลูมิเนียม | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โซลูชันรมดำโลหะแบบจุ่มเย็น ครอบคลุม Brass Copper Steel Zinc Aluminium สีดำสม่ำเสมอ ลดแสงสะท้อน เสริมการป้องกันการกัดกร่อน พร้อมแนวทางใช้งานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
-
-  <!-- Hreflang: ถ้ายังไม่มีหน้า EN ให้คงเฉพาะ th และ x-default -->
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/blackening/">
-  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/blackening/">
-  <!-- ถ้ามีภาษาอังกฤษแล้ว ค่อยเพิ่มบรรทัดนี้: -->
-  <!-- <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/en/products/blackening/"> -->
 
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -25,32 +19,32 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:locale" id="ogLocale" content="th_TH">
+  <!-- Open Graph / Twitter (ใช้โดเมนตัวเองเพื่อพรีวิวเสถียร) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
+  <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="น้ำยารมดำโลหะแบบจุ่มเย็น — Blackening Solutions | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="Blackening สำหรับ Brass Copper Steel Zinc Aluminium สีดำสม่ำเสมอ ลดแสงสะท้อน เสริมการป้องกันการกัดกร่อน.">
   <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
-  <meta property="og:image" content="https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp">
-  <meta property="og:image:secure_url" content="https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp">
+  <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Blackened metal parts — brass copper steel zinc aluminium">
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="น้ำยารมดำโลหะแบบจุ่มเย็น — Blackening Solutions | Baume Chemical">
   <meta name="twitter:description" id="twDesc" content="โซลูชันรมดำโลหะสำหรับวัสดุหลายชนิด สีดำสม่ำเสมอ พร้อมแนวทางใช้งาน.">
-  <meta name="twitter:image" content="https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp">
+  <meta name="twitter:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg">
 
   <!-- Performance Hints -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" as="image"
-        href="https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp"
-        imagesrcset="https://www.baumechemical.com/assets/img/og/blackening-800.webp 800w, https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp 1200w"
+        href="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg"
+        imagesrcset="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg 800w, https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg 1200w"
         imagesizes="(max-width: 900px) 92vw, 900px">
 
-  <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">
+  <!-- Structured Data (สร้าง/อัปเดตตามภาษาแบบไดนามิก) -->
+  <script id="ld-org" type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"Organization",
@@ -65,8 +59,7 @@
   }
   </script>
 
-  <!-- CollectionPage + ItemList เป็น mainEntity และเพิ่ม hasPart ให้รู้ว่าเป็นหน้าหมวด -->
-  <script type="application/ld+json">
+  <script id="ld-collection" type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"CollectionPage",
@@ -74,10 +67,6 @@
     "name":"Blackening — น้ำยารมดำโลหะแบบจุ่มเย็น",
     "url":"https://www.baumechemical.com/products/blackening/",
     "description":"น้ำยารมดำและสารทำพาทินาสำหรับงานอุตสาหกรรมและตกแต่ง ครอบคลุมหลายวัสดุ พร้อมแนวทางการใช้งานจริง",
-    "about":[
-      "metal blackening", "patina", "brass", "copper", "steel", "zinc", "aluminium"
-    ],
-    "image":"https://www.baumechemical.com/assets/img/og/blackening-1200x630.webp",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
       "@type":"ItemList",
@@ -97,19 +86,6 @@
       {"@type":"WebPage","name":"Zinc Blackening","url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#zinc"},
       {"@type":"WebPage","name":"Aluminium Blackening","url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#aluminium"},
       {"@type":"WebPage","name":"Patina Solutions","url":"https://www.baumechemical.com/products/blackening/troubleshootingpatina"}
-    ]
-  }
-  </script>
-
-  <!-- Breadcrumb -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"BreadcrumbList",
-    "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Blackening","item":"https://www.baumechemical.com/products/blackening/"}
     ]
   }
   </script>
